--- a/index.html
+++ b/index.html
@@ -28,15 +28,23 @@
             <!-- Social Icons - Always visible -->
             <ul class="navbar-nav ms-auto"> <!-- ms-auto to align the nav to the right -->
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=61554648415610"><i class="bi bi-facebook" style="color: #3b5998;"></i></a>
+                    <a class="nav-link" href="https://www.facebook.com/welearn.academy.official?mibextid=ZbWKwL"><i class="bi bi-facebook" style="color: #3b5998;"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://youtube.com/@MajidSaqr?si=VNMh9lOR23dXtxVl"><i class="bi bi-youtube" style="color: #e1306c;"></i></a>
+                    <a class="nav-link" href="https://www.instagram.com/we.learn.academy?igsh=MWgzZGJ6aGFyYWwwYQ=="><i class="bi bi-instagram" style="color: #e1306c;"></i></a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" href="https://x.com/we_learn_acad?t=kGUItkXgTF1yQy5t9dAeKw&s=09"><i class="bi bi-twitter" style="color: #1DA1F2;"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://youtube.com/@we.learn.academy?si=LXw19AUrSyKqD7Tt"><i class="bi bi-youtube" style="color: red;"></i></a>
                 </li>      
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.tiktok.com/@educraft63?_t=8m5aJLlWq0c&_r=1"><i class="bi bi-tiktok" style="color: #000;"></i></a>
-                </li>          
-                <!-- Add more social icons as needed -->
+                    <a class="nav-link" href="https://www.tiktok.com/@we.learn.academy7?_t=8oBj1Aw5Nqc&_r=1"><i class="bi bi-tiktok" style="color: #000;"></i></a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="https://x.com/we_learn_acad?t=kGUItkXgTF1yQy5t9dAeKw&s=09"><i class="bi bi-linkedin" style="color: #1DA1F2;"></i></a>
+                </li> -->
             </ul>
             <!-- Logo -->
             <!-- <a class="navbar-brand" href="#">
@@ -239,7 +247,7 @@
 
     <!-- Whatsapp icon -->
     <div class="whatsapp-container">
-        <a href="https://wa.me/+201032478918" target="_blank" class="whatsapp-button btn btn-success rounded-circle" id="whatsappBtn">
+        <a href="https://wa.me/+201040618413" target="_blank" class="whatsapp-button btn btn-success rounded-circle" id="whatsappBtn">
             <i class="fab fa-whatsapp"></i>
         </a>
         <div class="whatsapp-message" id="whatsappMessage">اطلب الان عبر الواتساب</div>
