--- a/index.html
+++ b/index.html
@@ -19,37 +19,52 @@
 </head>
 <body>
     <!-- heeader -->
-    <nav class="navbar navbar-expand navbar-light" id="nav_header">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav_header">
+        <div class="container-fluid" style="background-color: #fff;">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="images/logo/logo.jpeg" alt="Logo">
+                <img src="images/logo/logo.jpeg" alt="Logo" class="img-fluid">
             </a>
-            <!-- Social Icons - Always visible -->
-            <ul class="navbar-nav ms-auto"> <!-- ms-auto to align the nav to the right -->
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.facebook.com/welearn.academy.official?mibextid=ZbWKwL"><i class="bi bi-facebook" style="color: #3b5998;"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/we.learn.academy?igsh=MWgzZGJ6aGFyYWwwYQ=="><i class="bi bi-instagram" style="color: #e1306c;"></i></a>
-                </li> 
-                <li class="nav-item">
-                    <a class="nav-link" href="https://x.com/we_learn_acad?t=kGUItkXgTF1yQy5t9dAeKw&s=09"><i class="bi bi-twitter" style="color: #1DA1F2;"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://youtube.com/@we.learn.academy?si=LXw19AUrSyKqD7Tt"><i class="bi bi-youtube" style="color: red;"></i></a>
-                </li>      
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.tiktok.com/@we.learn.academy7?_t=8oBj1Aw5Nqc&_r=1"><i class="bi bi-tiktok" style="color: #000;"></i></a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="https://x.com/we_learn_acad?t=kGUItkXgTF1yQy5t9dAeKw&s=09"><i class="bi bi-linkedin" style="color: #1DA1F2;"></i></a>
-                </li> -->
-            </ul>
-            <!-- Logo -->
-            <!-- <a class="navbar-brand" href="#">
-                <img src="images/logo/logo.png" alt="Logo">
-            </a> -->
+            <!-- Toggle button for mobile view -->
+            <button id="toggle-button" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Social Icons -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link d-flex align-items-center" href="https://www.facebook.com/welearn.academy.official?mibextid=ZbWKwL">
+                            <i class="bi bi-facebook" style="color: #3b5998; margin-left: 5px;"></i>
+                            <span>تابعنا على فيسبوك</span>
+                        </a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link d-flex align-items-center" href="https://www.instagram.com/we.learn.academy?igsh=MWgzZGJ6aGFyYWwwYQ==">
+                            <i class="bi bi-instagram" style="color: #e1306c; margin-left: 5px;"></i>
+                            <span>تابعنا على إنستغرام</span>
+                        </a>
+                    </li> 
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link d-flex align-items-center" href="https://x.com/we_learn_acad?t=kGUItkXgTF1yQy5t9dAeKw&s=09">
+                            <i class="bi bi-twitter" style="color: #1DA1F2; margin-left: 5px;"></i>
+                            <span>تابعنا على تويتر</span>
+                        </a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link d-flex align-items-center" href="https://youtube.com/@we.learn.academy?si=LXw19AUrSyKqD7Tt">
+                            <i class="bi bi-youtube" style="color: red; margin-left: 5px;"></i>
+                            <span>تابعنا على يوتيوب</span>
+                        </a>
+                    </li>      
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link d-flex align-items-center" href="https://www.tiktok.com/@we.learn.academy7?_t=8oBj1Aw5Nqc&_r=1">
+                            <i class="bi bi-tiktok" style="color: #000; margin-left: 5px;"></i>
+                            <span>تابعنا على تيك توك</span>
+                        </a>
+                    </li>
+                </ul>
+                
+            </div>
         </div>
     </nav>
 
